# blob-shooter

./: .gitignore  README.md  bun.lockb  index.html  index.tauri.html  package-lock.json  package.json  script.js  style.css  tsconfig.json  webpack.build.config.js  webpack.dev.config.js
.github/: release-drafter.yml
.github/workflows/: main.yml  release-drafter.yml
assets/shader/: crt.frag
public/: index.html  style.css
public/assets/shader/: crt.frag  crt.vert
public/howler.js-2.2.3/: CHANGELOG.md  README.md
public/howler.js-2.2.3/src/: howler.core.js
public/howler.js-2.2.3/src/plugins/: howler.spatial.js
public/howler.js-2.2.3/tests/: core.html5audio.html  core.webaudio.html  index.html  spatial.html
public/howler.js-2.2.3/tests/css/: styles.css
public/howler.js-2.2.3/tests/js/: core.html5audio.js  core.webaudio.js  spatial.js
public/libraries/magicMouse/: magic-mouse.css  magic_mouse.js
public/scripts/: eventListeners.js  helper.js  main.js  shader.js  variables.js
public/scripts/classes/: BackgroundParticle.js  Enemy.js  Entity.js  Particle.js  Player.js  PowerUp.js  Projectile.js
scripts/: main.js
scripts/classes/: Enemy.js  Particle.js  Player.js  PowerUp.js
src/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: createIcon.sh  icon.icns
src/scripts/: helper.ts  main.ts  shader.ts  types.ts
src/scripts/classes/: Audio.ts  BackgroundParticle.ts  Enemy.ts  Entity.ts  Particle.ts  Player.ts  PowerUp.ts  Projectile.ts
