[package]
name = "blob-shooter"
version = "0.1.0"
description = "A Blob-Shooting Game."
authors = [ "hackcraft" ]
license = ""
repository = ""
default-run = "blob-shooter"
edition = "2021"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "blob-shooter"
path = "src/main.rs"
