[package]
name = "blob-shooter"
version = "1.1.0"
description = "A game to shoot blobs."
authors = ["Hackcraft_"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.3", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
